Ajuste de layout e html e css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,57 @@
 <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
 <body>
+    <main>
+        <div class="info-container">
+        <section class="info overlay">
+            <div class="lancamento">
+            <div>
+            <p><span>45</span></p>
+            <p>Dias</p>
+            </div>
+
+            <div>
+            <p><span>10</span></p>
+            <p>Horas</p>
+            </div>
+
+            <div>
+            <p><span>24</span></p>
+            <p>Minutos</p>
+            </div>
+
+            <div>
+            <p><span>58</span></p>
+            <p>Segundos</p>
+            </div>
+    
+            </div>
+        </section>
+        <section class="info newsletter">
+            <h2>Prédio Acqua</h2>
+            <p>Receba novidades sobre nosso lançamento.</p>
+            <p>Morar contemporâneo para pessoas com estilo de vida dinâmico e que buscam praticidade no seu dia a dia. Lazer, esporte, trabalho e contato com a natureza em um só lugar.
+            </p>
+
+            <form action="">
+                <label for="email">Digite seu email</label>
+                <input type="text" name="" id="email" />
+                <button type="submit">Quero saber mais</button>
+            </form>
+        </section>
+        </div>
+        <section>
+            <h2>Andamento do projeto</h2>
+            <p>Veja como andamento da construção</p>
+            <img src="assets/predio1.png" alt="Andamento da construção do prédio Acqua" />
+            <img src="assets/predio2.png" alt="Andamento da construção do prédio Acqua" />
+            <img src="assets/predio3.png" alt="Andamento da construção do prédio Acqua" />
+            <img src="assets/predio4.png" alt="Andamento da construção do prédio Acqua" />
+            <img src="assets/predio5.png" alt="Andamento da construção do prédio Acqua" />
+            <img src="assets/predio6.png" alt="Andamento da construção do prédio Acqua" />
+
+        </section>
+    </main>
     
 </body>
 </html>
